ass2/initial/src/main/d96/parser/.antlr/D96Parser.py
# Generated from f:\Documents\Dai_hoc\nam3_ki2\PPL\ass2\initial\src\main\d96\parser\D96.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class D96Parser ( Parser ):

    grammarFileName = "D96.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'..'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'Int'", "'Float'", "'String'", "'Boolean'", 
                     "'Void'", "'Class'", "'Val'", "'Var'", "'Break'", "'Foreach'", 
                     "'Null'", "'Constructor'", "'Destructor'", "'Continue'", 
                     "'True'", "'If'", "'False'", "'New'", "'Else'", "'Elseif'", 
                     "'By'", "'Return'", "'In'", "'While'", "'Array'", "'Self'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'('", "')'", 
                     "'{'", "'}'", "';'", "':'", "','", "'['", "']'", "'+'", 
                     "'-'", "'*'", "'/'", "'%'", "'!'", "'||'", "'&&'", 
                     "'!='", "'=='", "'='", "'<'", "'>'", "'<='", "'>='", 
                     "'.'", "'::'", "'==.'", "'+.'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "INT_LITERAL", "FL_LITERAL", 
                      "BOOL_LITERAL", "STRING_LITERAL", "INTTYPE", "FLOATTYPE", 
                      "STRTYPE", "BOOLTYPE", "VOIDTYPE", "CLASS", "VAL", 
                      "VAR", "BREAK", "FOREACH", "NULL", "CONSTRUC", "DESTRUC", 
                      "CONTINUE", "TRUE", "IF", "FALSE", "NEW", "ELSE", 
                      "ELSEIF", "BY", "RETURN", "IN", "WHILE", "ARRAY", 
                      "SELF", "BLOCK_COMMENT", "ID", "Dollar_ID", "LB", 
                      "RB", "LP", "RP", "SEMI", "COLON", "CM", "LSB", "RSB", 
                      "ADD", "SUB", "MUL", "DIV", "MOD", "NOT", "OR", "AND", 
                      "NEQ", "EQ", "ASSIGN", "LT", "GT", "LE", "GE", "DOT", 
                      "ACCESS", "STR_CMP", "STR_CAT", "WS", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE", "ERROR_CHAR", "UNTERMINATED_COMMENT" ]

    RULE_program = 0
    RULE_classes = 1
    RULE_class_declares = 2
    RULE_class_declare = 3
    RULE_body = 4
    RULE_body_class = 5
    RULE_body_classes = 6
    RULE_member = 7
    RULE_attribute_declare = 8
    RULE_varible = 9
    RULE_vardecl = 10
    RULE_term = 11
    RULE_method = 12
    RULE_method_declare = 13
    RULE_destructor_declare = 14
    RULE_constructor_declare = 15
    RULE_list_IDs = 16
    RULE_ids = 17
    RULE_list_ID = 18
    RULE_exp0 = 19
    RULE_exp1 = 20
    RULE_exp2 = 21
    RULE_exp3 = 22
    RULE_exp4 = 23
    RULE_exp5 = 24
    RULE_exp6 = 25
    RULE_exp7 = 26
    RULE_exp8 = 27
    RULE_exp9 = 28
    RULE_exp10 = 29
    RULE_exp11 = 30
    RULE_index_operator = 31
    RULE_operands = 32
    RULE_literal = 33
    RULE_list_param = 34
    RULE_param = 35
    RULE_varconst_declare = 36
    RULE_varible1 = 37
    RULE_vardecl1 = 38
    RULE_term1 = 39
    RULE_stmt_assign = 40
    RULE_stmt_if = 41
    RULE_stmt_elif = 42
    RULE_stmt_else = 43
    RULE_stmt_foreach = 44
    RULE_stmt_while = 45
    RULE_stmt_break = 46
    RULE_stmt_continue = 47
    RULE_stmt_return = 48
    RULE_stmt_callMethod = 49
    RULE_member_access = 50
    RULE_in_method = 51
    RULE_stt_method = 52
    RULE_block_stmt = 53
    RULE_list_stmt = 54
    RULE_stmts = 55
    RULE_stmt = 56
    RULE_array = 57
    RULE_i_array = 58
    RULE_m_array = 59
    RULE_listARRAY = 60
    RULE_listLIT = 61
    RULE_list_mem = 62
    RULE_listval = 63
    RULE_typ = 64
    RULE_arraytype = 65

    ruleNames =  [ "program", "classes", "class_declares", "class_declare", 
                   "body", "body_class", "body_classes", "member", "attribute_declare", 
                   "varible", "vardecl", "term", "method", "method_declare", 
                   "destructor_declare", "constructor_declare", "list_IDs", 
                   "ids", "list_ID", "exp0", "exp1", "exp2", "exp3", "exp4", 
                   "exp5", "exp6", "exp7", "exp8", "exp9", "exp10", "exp11", 
                   "index_operator", "operands", "literal", "list_param", 
                   "param", "varconst_declare", "varible1", "vardecl1", 
                   "term1", "stmt_assign", "stmt_if", "stmt_elif", "stmt_else", 
                   "stmt_foreach", "stmt_while", "stmt_break", "stmt_continue", 
                   "stmt_return", "stmt_callMethod", "member_access", "in_method", 
                   "stt_method", "block_stmt", "list_stmt", "stmts", "stmt", 
                   "array", "i_array", "m_array", "listARRAY", "listLIT", 
                   "list_mem", "listval", "typ", "arraytype" ]

    EOF = Token.EOF
    T__0=1
    INT_LITERAL=2
    FL_LITERAL=3
    BOOL_LITERAL=4
    STRING_LITERAL=5
    INTTYPE=6
    FLOATTYPE=7
    STRTYPE=8
    BOOLTYPE=9
    VOIDTYPE=10
    CLASS=11
    VAL=12
    VAR=13
    BREAK=14
    FOREACH=15
    NULL=16
    CONSTRUC=17
    DESTRUC=18
    CONTINUE=19
    TRUE=20
    IF=21
    FALSE=22
    NEW=23
    ELSE=24
    ELSEIF=25
    BY=26
    RETURN=27
    IN=28
    WHILE=29
    ARRAY=30
    SELF=31
    BLOCK_COMMENT=32
    ID=33
    Dollar_ID=34
    LB=35
    RB=36
    LP=37
    RP=38
    SEMI=39
    COLON=40
    CM=41
    LSB=42
    RSB=43
    ADD=44
    SUB=45
    MUL=46
    DIV=47
    MOD=48
    NOT=49
    OR=50
    AND=51
    NEQ=52
    EQ=53
    ASSIGN=54
    LT=55
    GT=56
    LE=57
    GE=58
    DOT=59
    ACCESS=60
    STR_CMP=61
    STR_CAT=62
    WS=63
    UNCLOSE_STRING=64
    ILLEGAL_ESCAPE=65
    ERROR_CHAR=66
    UNTERMINATED_COMMENT=67

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classes(self):
            return self.getTypedRuleContext(D96Parser.ClassesContext,0)


        def EOF(self):
            return self.getToken(D96Parser.EOF, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_program




    def program(self):

        localctx = D96Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.classes()
            self.state = 133
            self.match(D96Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_declare(self):
            return self.getTypedRuleContext(D96Parser.Class_declareContext,0)


        def class_declares(self):
            return self.getTypedRuleContext(D96Parser.Class_declaresContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_classes




    def classes(self):

        localctx = D96Parser.ClassesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_classes)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.class_declare()
            self.state = 136
            self.class_declares()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_declaresContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_declare(self):
            return self.getTypedRuleContext(D96Parser.Class_declareContext,0)


        def class_declares(self):
            return self.getTypedRuleContext(D96Parser.Class_declaresContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_class_declares




    def class_declares(self):

        localctx = D96Parser.Class_declaresContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_class_declares)
        try:
            self.state = 142
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.CLASS]:
                self.enterOuterAlt(localctx, 1)
                self.state = 138
                self.class_declare()
                self.state = 139
                self.class_declares()
                pass
            elif token in [D96Parser.EOF]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(D96Parser.CLASS, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.ID)
            else:
                return self.getToken(D96Parser.ID, i)

        def LP(self):
            return self.getToken(D96Parser.LP, 0)

        def body(self):
            return self.getTypedRuleContext(D96Parser.BodyContext,0)


        def RP(self):
            return self.getToken(D96Parser.RP, 0)

        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_class_declare




    def class_declare(self):

        localctx = D96Parser.Class_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_class_declare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.match(D96Parser.CLASS)
            self.state = 145
            self.match(D96Parser.ID)
            self.state = 148
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.COLON:
                self.state = 146
                self.match(D96Parser.COLON)
                self.state = 147
                self.match(D96Parser.ID)


            self.state = 150
            self.match(D96Parser.LP)
            self.state = 151
            self.body()
            self.state = 152
            self.match(D96Parser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def body_class(self):
            return self.getTypedRuleContext(D96Parser.Body_classContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_body




    def body(self):

        localctx = D96Parser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_body)
        try:
            self.state = 156
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.VAL, D96Parser.VAR, D96Parser.CONSTRUC, D96Parser.DESTRUC, D96Parser.ID, D96Parser.Dollar_ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 154
                self.body_class()
                pass
            elif token in [D96Parser.RP]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Body_classContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def member(self):
            return self.getTypedRuleContext(D96Parser.MemberContext,0)


        def body_classes(self):
            return self.getTypedRuleContext(D96Parser.Body_classesContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_body_class




    def body_class(self):

        localctx = D96Parser.Body_classContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_body_class)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self.member()
            self.state = 159
            self.body_classes()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Body_classesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def member(self):
            return self.getTypedRuleContext(D96Parser.MemberContext,0)


        def body_classes(self):
            return self.getTypedRuleContext(D96Parser.Body_classesContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_body_classes




    def body_classes(self):

        localctx = D96Parser.Body_classesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_body_classes)
        try:
            self.state = 165
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.VAL, D96Parser.VAR, D96Parser.CONSTRUC, D96Parser.DESTRUC, D96Parser.ID, D96Parser.Dollar_ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 161
                self.member()
                self.state = 162
                self.body_classes()
                pass
            elif token in [D96Parser.RP]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemberContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute_declare(self):
            return self.getTypedRuleContext(D96Parser.Attribute_declareContext,0)


        def method(self):
            return self.getTypedRuleContext(D96Parser.MethodContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_member




    def member(self):

        localctx = D96Parser.MemberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_member)
        try:
            self.state = 169
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.VAL, D96Parser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 167
                self.attribute_declare()
                pass
            elif token in [D96Parser.CONSTRUC, D96Parser.DESTRUC, D96Parser.ID, D96Parser.Dollar_ID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 168
                self.method()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attribute_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varible(self):
            return self.getTypedRuleContext(D96Parser.VaribleContext,0)


        def SEMI(self):
            return self.getToken(D96Parser.SEMI, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_attribute_declare




    def attribute_declare(self):

        localctx = D96Parser.Attribute_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_attribute_declare)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            self.varible()
            self.state = 172
            self.match(D96Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VaribleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAL(self):
            return self.getToken(D96Parser.VAL, 0)

        def VAR(self):
            return self.getToken(D96Parser.VAR, 0)

        def vardecl(self):
            return self.getTypedRuleContext(D96Parser.VardeclContext,0)


        def term(self):
            return self.getTypedRuleContext(D96Parser.TermContext,0)


        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def typ(self):
            return self.getTypedRuleContext(D96Parser.TypContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_varible




    def varible(self):

        localctx = D96Parser.VaribleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_varible)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 174
            _la = self._input.LA(1)
            if not(_la==D96Parser.VAL or _la==D96Parser.VAR):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 180
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 175
                self.vardecl()
                pass

            elif la_ == 2:
                self.state = 176
                self.term()
                self.state = 177
                self.match(D96Parser.COLON)
                self.state = 178
                self.typ()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.CM)
            else:
                return self.getToken(D96Parser.CM, i)

        def vardecl(self):
            return self.getTypedRuleContext(D96Parser.VardeclContext,0)


        def exp0(self):
            return self.getTypedRuleContext(D96Parser.Exp0Context,0)


        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def Dollar_ID(self):
            return self.getToken(D96Parser.Dollar_ID, 0)

        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def typ(self):
            return self.getTypedRuleContext(D96Parser.TypContext,0)


        def ASSIGN(self):
            return self.getToken(D96Parser.ASSIGN, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_vardecl




    def vardecl(self):

        localctx = D96Parser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_vardecl)
        self._la = 0 # Token type
        try:
            self.state = 194
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 182
                _la = self._input.LA(1)
                if not(_la==D96Parser.ID or _la==D96Parser.Dollar_ID):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 183
                self.match(D96Parser.CM)
                self.state = 184
                self.vardecl()
                self.state = 185
                self.match(D96Parser.CM)
                self.state = 186
                self.exp0()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 188
                _la = self._input.LA(1)
                if not(_la==D96Parser.ID or _la==D96Parser.Dollar_ID):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 189
                self.match(D96Parser.COLON)
                self.state = 190
                self.typ()
                self.state = 191
                self.match(D96Parser.ASSIGN)
                self.state = 192
                self.exp0()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CM(self):
            return self.getToken(D96Parser.CM, 0)

        def term(self):
            return self.getTypedRuleContext(D96Parser.TermContext,0)


        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def Dollar_ID(self):
            return self.getToken(D96Parser.Dollar_ID, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_term




    def term(self):

        localctx = D96Parser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_term)
        self._la = 0 # Token type
        try:
            self.state = 200
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 196
                _la = self._input.LA(1)
                if not(_la==D96Parser.ID or _la==D96Parser.Dollar_ID):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 197
                self.match(D96Parser.CM)
                self.state = 198
                self.term()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 199
                _la = self._input.LA(1)
                if not(_la==D96Parser.ID or _la==D96Parser.Dollar_ID):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def method_declare(self):
            return self.getTypedRuleContext(D96Parser.Method_declareContext,0)


        def destructor_declare(self):
            return self.getTypedRuleContext(D96Parser.Destructor_declareContext,0)


        def constructor_declare(self):
            return self.getTypedRuleContext(D96Parser.Constructor_declareContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_method




    def method(self):

        localctx = D96Parser.MethodContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_method)
        try:
            self.state = 205
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.ID, D96Parser.Dollar_ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 202
                self.method_declare()
                pass
            elif token in [D96Parser.DESTRUC]:
                self.enterOuterAlt(localctx, 2)
                self.state = 203
                self.destructor_declare()
                pass
            elif token in [D96Parser.CONSTRUC]:
                self.enterOuterAlt(localctx, 3)
                self.state = 204
                self.constructor_declare()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Method_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(D96Parser.LB, 0)

        def RB(self):
            return self.getToken(D96Parser.RB, 0)

        def block_stmt(self):
            return self.getTypedRuleContext(D96Parser.Block_stmtContext,0)


        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def Dollar_ID(self):
            return self.getToken(D96Parser.Dollar_ID, 0)

        def list_IDs(self):
            return self.getTypedRuleContext(D96Parser.List_IDsContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_method_declare




    def method_declare(self):
